renamed variable, added lineWithArea chart

--- a/src/ts/views/dashboard.html
+++ b/src/ts/views/dashboard.html
@@ -10,6 +10,9 @@
     <oj-button on-oj-action="[[buttonClick]]" id="scatter">
       Scatter-chart
     </oj-button>
+    <oj-button on-oj-action="[[buttonClick]]" id="lineWithArea">
+      Line chart
+    </oj-button>
   </div>
   <oj-chart
     id="barChart"
